--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -20,7 +20,6 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical|center_horizontal"
             android:padding="10dp">
 
             <!-- buton inapoi -->
@@ -31,7 +30,7 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:focusable="true"
-                android:src="@drawable/ic_sageata_inapoi"
+                android:src="@drawable/ic_arrow_down"
                 app:tint="@color/text" />
 
             <!-- text now playing -->
@@ -64,8 +63,9 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    app:cardBackgroundColor="@color/primara"
+                    app:cardBackgroundColor="#00000000"
                     app:cardCornerRadius="@dimen/radius20"
+                    app:cardElevation="0dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintDimensionRatio="W,1:1"
                     app:layout_constraintEnd_toEndOf="parent"
