--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/fundal"
-    tools:context=".controller.MainActivity">
+    tools:context=".controllers.MainActivity">
 
     <!-- cadru in care vor aparea fragmentele -->
     <FrameLayout
