--- a/app/src/main/res/layout/layout_progress_dialog.xml
+++ b/app/src/main/res/layout/layout_progress_dialog.xml
@@ -2,6 +2,7 @@
 
 <!-- aspect Progress Dialog -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
@@ -15,19 +16,32 @@
         android:orientation="vertical"
         android:padding="25dp">
 
+        <!-- bara de progres -->
         <ProgressBar
+            android:id="@+id/progress_dialog_progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminateTint="@color/primara" />
 
+        <!-- animatie lottie -->
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/progress_dialog_lottie"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:visibility="gone"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="false"
+            app:lottie_rawRes="@raw/lottie_success" />
+
+        <!-- text mesaj -->
         <TextView
+            android:id="@+id/progress_dialog_textViewMesaj"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Se procesează"
             android:textColor="@color/text"
-            android:textSize="@dimen/text_standard"
-            android:textStyle="bold" />
+            android:textSize="@dimen/text_standard" />
 
     </LinearLayout>
 
