--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -12,9 +12,11 @@
         <item>Trap</item>
         <item>Future Bass</item>
         <item>Electro</item>
+        <item>Hyper Pop</item>
         <item>Hip Hop</item>
         <item>Rap</item>
         <item>Rock</item>
         <item>Alternative Rock</item>
+        <item>Pop</item>
     </string-array>
 </resources>
