--- a/app/src/main/res/layout/layout_bottom_sheet_date_melodie.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_date_melodie.xml
@@ -127,7 +127,7 @@
             android:textSize="@dimen/text_standard"
             android:textStyle="bold" />
 
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -141,7 +141,7 @@
                 android:textColor="@color/text"
                 android:textSize="@dimen/text_standard" />
 
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
 
     </LinearLayout>
 
