--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -1,70 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/profil_scrollViewContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/fundal"
+    android:scrollbars="none"
     tools:context=".controllers.ProfilActivity">
 
-    <TextView
-        android:id="@+id/profil_textViewSalut"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:textSize="@dimen/text_standard"
-        app:layout_constraintBaseline_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:orientation="vertical"
+        android:padding="15dp">
 
-    <TextView
-        android:id="@+id/profil_textViewEmailTitlu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Adresa de email"
-        android:textSize="@dimen/text_standard"
-        android:textStyle="bold"
-        app:layout_constraintBaseline_toBottomOf="@+id/profil_textViewSalut"
-        app:layout_constraintLeft_toLeftOf="@+id/profil_textViewSalut" />
+        <!-- layout date cont -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_rotunjit"
+            android:backgroundTint="@color/fundal_alt"
+            android:orientation="vertical"
+            android:padding="@dimen/padding_ecran">
 
-    <TextView
-        android:id="@+id/profil_textViewEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:textSize="@dimen/text_standard"
-        app:layout_constraintLeft_toLeftOf="@+id/profil_textViewEmailTitlu"
-        app:layout_constraintTop_toBottomOf="@+id/profil_textViewEmailTitlu" />
+            <!-- nume utilizator -->
+            <TextView
+                android:id="@+id/profil_textViewNumeUtilizator"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nume utilizator"
+                android:textColor="@color/text"
+                android:textSize="@dimen/text_mare"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/profil_textViewNumeTitlu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Nume"
-        android:textSize="@dimen/text_standard"
-        android:textStyle="bold"
-        app:layout_constraintBaseline_toBottomOf="@+id/profil_textViewEmail"
-        app:layout_constraintLeft_toLeftOf="@+id/profil_textViewEmail" />
+            <!-- grad -->
+            <TextView
+                android:id="@+id/profil_textViewGrad"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Grad"
+                android:textColor="@color/primara"
+                android:textSize="@dimen/text_standard"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/bottom_sheet_meniu_textViewNume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:textSize="@dimen/text_standard"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profil_textViewNumeTitlu" />
+        </LinearLayout>
 
-    <Button
-        android:id="@+id/profil_buttonMeniu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/primara"
-        android:textSize="@dimen/text_standard"
-        android:text="Meniu"
-        android:textColor="@color/text_pe_primara"
-        app:layout_constraintBaseline_toBottomOf="@id/bottom_sheet_meniu_textViewNume"
-        app:layout_constraintLeft_toLeftOf="@+id/bottom_sheet_meniu_textViewNume" />
+        <!-- layout statistici -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <!-- numarul de melodii -->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/background_rotunjit"
+                android:backgroundTint="@color/fundal_alt"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/ic_nota_muzicala"
+                    app:tint="@color/text" />
+
+                <TextView
+                    android:id="@+id/profil_textViewNumarMelodii"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Numărul de melodii"
+                    android:textAlignment="center"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/text_standard" />
+
+            </LinearLayout>
+
+            <!-- numarul de redari -->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/background_rotunjit"
+                android:backgroundTint="@color/fundal_alt"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/ic_play"
+                    app:tint="@color/text" />
+
+                <TextView
+                    android:id="@+id/profil_textViewNumarRedari"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Numărul de redări"
+                    android:textAlignment="center"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/text_standard" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/profil_textViewTitluListaMelodii"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Melodiile artistului"
+            android:textColor="@color/text"
+            android:textSize="@dimen/text_mare"
+            android:textStyle="bold" />
+
+        <!-- RecyclerView melodii artist -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/profil_recyclerViewMelodii"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp" />
+
+    </LinearLayout>
+
+</ScrollView>
