--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -1,23 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!-- bara superioara -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:contentInsetStart="0dp"
-    android:contentInsetLeft="0dp"
-    android:contentInsetEnd="0dp"
-    android:contentInsetRight="0dp"
-    app:contentInsetEnd="0dp"
-    app:contentInsetLeft="0dp"
-    app:contentInsetRight="0dp"
-    app:contentInsetStart="0dp">
+    android:background="@drawable/background_toolbar">
 
-    <!-- bara superioara -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="10dp">
+        android:padding="10dp">
 
         <!-- buton inapoi -->
         <ImageView
@@ -44,4 +36,4 @@
 
     </RelativeLayout>
 
-</androidx.appcompat.widget.Toolbar>
+</LinearLayout>
