--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -135,7 +135,8 @@
                 android:id="@+id/profil_recyclerViewMelodii"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp" />
+                android:layout_marginTop="5dp"
+                android:scrollbars="vertical" />
 
         </LinearLayout>
 
